[package]
name = "consul-rs"
version = "0.1.3"
authors = ["taochen"]
edition = "2018"
homepage = "https://github.com/ptechen"
documentation = "https://github.com/ptechen/consul-rs/blob/main/README.md"
repository = "https://github.com/ptechen/consul-rs.git"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "consul api"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.9.0"
http-types = "2.11.1"
lazy_static = "1.4.0"
regex = "1.5.4"
serde = "1.0.126"
serde_derive = "1.0.126"
serde_json = "1.0.64"
surf = "2.2.0"